--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,32 @@
+.big-image {
+  height: 88vh;
+  width: 100vw;
+  position: relative;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-image: url("./images/ReactNativeFirebase.png");
+}
+
+.overlay {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.65);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.shags {
+  height: 60%;
+  width: 30%;
+  border-radius: 50%;
+}
+
 .App {
   text-align: center;
 }
