--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,8 @@
 }
 
 .content {
-  background-color: cadetblue;
+  /*background-color: hsl(100, 50%, 70%);*/
+  background: linear-gradient(to right, black, 20%, cyan);
 }
 
 .overlay2 {
@@ -93,7 +94,15 @@
   position: sticky;
   top: 0px;
   background-color: cadetblue;
-  border-radius: 20px;
+  border-radius: 10%;
+  height: 60px;
+  width: 210px;
+  display: flex;
+  line-height: 60px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid yellow;
   /*FOR DIFFERENT BROWSERS*/
   /*position: -webkit-sticky.*/
 }
@@ -118,6 +127,7 @@
   line-height: 60px;
   color: white;
   font-size: large;
+  margin-top: 2rem;
 }
 
 .verMasBotton:hover {
@@ -142,7 +152,7 @@
 }
 
 .description {
-  color:cornsilk;
+  color:black;
 }
 
 .capturasPacket {
@@ -155,8 +165,15 @@
 .capturas {
   height: 45%;
   width: 45%;
-  margin-bottom: 5%;
+  /*margin-bottom: 5%;*/
   border-radius: 20px;
+}
+
+.footNote {
+  margin-bottom: 2rem;
+  border-bottom: 2px solid black;
+  border-right: 2px solid black;
+  border-left: 2px solid black;
 }
 
 .App {
