--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,20 @@
 .big-image {
-  height: 88vh;
-  width: 100vw;
-  position: relative;
-  background-size: cover;
-  background-position: 50% 50%;
   background-image: url("./images/RNF7.png");
+  /*height: 88vh;
+  width: 100vw;*/
+  /*width: 'device-width';
+  height: 'device-height';*/
+  width: 100vw;
+  /*width: '100%';
+  height: '100%';*/
+  /*position: relative;*/
+  /*background-size: cover;*/
+  background-size:auto;
+  height: 88vh;
+  background-repeat: no-repeat;
+  /*background-size: auto;*/
+  /*background-position: 50% 50%;*/
+  background-position: center;
 }
 
 .overlay {
@@ -16,15 +26,92 @@
   background: rgba(0, 0, 0, 0.65);
   color: white;
   display: flex;
+  text-align: center;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
 
+.fab {
+  display:flex;
+  flex:1;
+  /*right:auto;
+  bottom: auto;*/
+  text-align: right;
+  align-self:flex-end;
+  align-items: flex-end;
+  flex-direction: column;
+  justify-content: flex-end;
+  z-index: 10;
+  position: fixed;
+  bottom: 10%;
+  right: 3%;
+  /*display: flex;
+  flex-wrap: wrap-reverse;
+  flex-direction: row-reverse;*/
+}
+
+.socialPacket{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: column;
+  margin-top: 1em;
+}
+
+.socialFixed{
+  height: 100%;
+  width: 100%;
+  /*border-radius: 15em;*/
+  border-radius: 50%;
+  font-size: 2em;
+  align-self: flex-end;
+  margin: 3%;
+  /*position: absolute;
+  right: 0;
+  z-index:15;*/
+}
+
+button {
+  cursor: pointer;
+}
+
+.socialNetwork{
+  margin-top: 0;
+  font-size: 0.5em;
+}
+
+.social {
+  height: 2em;
+  width: 6em;
+  border-radius: 15em;
+  margin-bottom: 0;
+  font-size: 2em;
+}
+
+.socialEmail{
+  font-size: 2em;
+}
+
 .content {
   /*background-color: hsl(100, 50%, 70%);*/
-  background: linear-gradient(to right, black, 20%, cyan);
+  /*background: linear-gradient(to right, black, 20%, cyan);*/
+  background-image: url("./images/portfoliobg.jpg");
+  position: relative;
+  background-size: cover;
+  background-position: 50% 50%;
 }
+/*
+.contentOverlay {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.65);
+  color: white;
+}
+*/
 
 .overlay2 {
   position: relative;
@@ -38,6 +125,7 @@
   align-items: center;
   justify-content: space-evenly;
   flex-direction: row;
+  border-radius: 1.5em;
 }
 
 .shags {
@@ -57,7 +145,7 @@
   border-bottom: 2px solid black;
   background-size: cover;
   background-position: 50% 50%;
-  border-radius: 20px;
+  border-radius: 1.5em;
   background-image: url("./images/RNF8.png");
 }
 
@@ -81,7 +169,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  border-right: 2px solid yellow;
+  border-right: 0.5vw solid yellow;
 }
 
 .category{
@@ -93,16 +181,18 @@
 .title {
   position: sticky;
   top: 0px;
-  background-color: cadetblue;
+  background-color: linear-gradient(to right, black, 20%, cyan);
   border-radius: 10%;
-  height: 60px;
-  width: 210px;
+  /*height: 60px;
+  width: 210px;*/
+  height: 3em;
+  width: 10em;
   display: flex;
-  line-height: 60px;
+  line-height: 3em;
   text-align: center;
   align-items: center;
   justify-content: center;
-  border: 2px solid yellow;
+  border-bottom: 2px solid yellow;
   /*FOR DIFFERENT BROWSERS*/
   /*position: -webkit-sticky.*/
 }
@@ -116,18 +206,25 @@
 }
 
 .verMasBotton {
+  display: inline-block;
   background-color: gray;
   border-radius: 5%;
   text-align: center;
   align-items: center;
   justify-content: center;
   font-weight: bolder;
-  height: 60px;
-  width: 210px;
-  line-height: 60px;
+  /*height: 3.5rem;
+  width: 12rem;*/
+  /*height: 4rem;
+  width: 12rem;*/
+  /*height: 4vw;
+  width: 14vw;*/
+  /*line-height: 4vw;*/
   color: white;
   font-size: large;
+  /*font-size: 3vh;*/
   margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
 .verMasBotton:hover {
@@ -137,9 +234,10 @@
   align-items: center;
   justify-content: center;
   font-weight: bolder;
-  height: 60px;
-  width: 210px;
-  line-height: 60px;
+  /*height: 3.5rem;
+  width: 12rem;*/
+  /*height: 4vh;
+  width: 12vh;*/
   color: white;
   font-size: large;
   cursor: pointer;
@@ -148,11 +246,43 @@
 .bothApps {
   height: 45%;
   width: 45%;
-  border-radius: 20px;
+  border-radius: 1.5em;
 }
 
 .description {
-  color:black;
+  color:white;
+  margin: 5vw;
+}
+
+@media (max-width: 400px){
+  .info {
+    float:left;
+    color: white;
+    max-width: 100%;
+    overflow-x: scroll;
+    font-size: 0.70rem;
+  }
+
+  .capturasPacket {
+    display: flex;
+    align-items:flex-start;
+    justify-content: space-evenly;
+    flex-direction: column;
+  }
+
+  .capturas {
+    height: 10px;
+    width: 10px;
+    /*margin-bottom: 5%;*/
+    border-radius: 1rem;
+  }
+}
+
+@media (min-width: 400px) {
+  .verMasBotton {
+    height: 3.5rem;
+    width: 12rem;
+  }
 }
 
 .capturasPacket {
@@ -166,7 +296,7 @@
   height: 45%;
   width: 45%;
   /*margin-bottom: 5%;*/
-  border-radius: 20px;
+  border-radius: 1rem;
 }
 
 .footNote {
@@ -174,6 +304,36 @@
   border-bottom: 2px solid black;
   border-right: 2px solid black;
   border-left: 2px solid black;
+}
+
+.info {
+  float:left;
+  color: white;
+}
+/*
+li { display: inline-block; font-size: 16px;}
+*/
+.infoUl {
+  /*text-align: right;
+  align-self: right;*/
+  /*margin: 0;
+  padding: 0;*/
+  /*display: flex;*/
+  margin-right: -10rem;
+  padding-right: -10rem;
+  max-width: 100%;
+  /*align-items: right;
+  justify-content: right;*/
+}
+
+.infoGeneral {
+  color: white;
+}
+
+.prox {
+  text-align: start;
+  align-items: start;
+  color: white;
 }
 
 .App {
