--- a/src/App.css
+++ b/src/App.css
@@ -295,7 +295,7 @@ button {
     overflow-x: scroll;
     font-size: 0.70rem;
   }
-
+/*
   .capturasPacket {
     display: flex;
     align-items:flex-start;
@@ -306,9 +306,9 @@ button {
   .capturas {
     height: 10px;
     width: 10px;
-    /*margin-bottom: 5%;*/
+    //margin-bottom: 5%;
     border-radius: 1rem;
-  }
+  }*/
 }
 /*
 @media (max-width: 780px) {
@@ -341,16 +341,17 @@ button {
   /*margin-bottom: 5%;*/
   border-radius: 1rem;
 }
-
+/*
 .footNotePacket {
   text-align: center;
 }
-
+*/
 .footNote {
   margin-bottom: 2rem;
   border-bottom: 2px solid black;
   border-right: 2px solid black;
   border-left: 2px solid black;
+  text-align: center;
 }
 
 .info {
