--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .big-image {
-  background-image: url("./images/RNF7.png");
+  background-image: url("./images/RNF5.jpg");
   /*height: 88vh;
   width: 100vw;*/
   /*width: 'device-width';
@@ -285,6 +285,25 @@ button {
     margin-bottom: 0;
     font-size: 2em;
   }
+
+  .socialPacketFather{
+    margin-top: -1.6rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+/*
+  .big-image {
+    background-image: url("./images/ReactNativeFirebase.png");
+    width: 100%;
+    top: 0;
+    background-size:auto;
+    height: 88vh;
+    background-repeat: no-repeat;
+    background-position: center;
+  }*/
+
 }
 
 @media (max-width: 400px){
@@ -348,9 +367,9 @@ button {
 */
 .footNote {
   margin-bottom: 2rem;
-  border-bottom: 2px solid black;
+  /*border-bottom: 2px solid black;
   border-right: 2px solid black;
-  border-left: 2px solid black;
+  border-left: 2px solid black;*/
   text-align: center;
 }
 
