--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,71 @@ button {
   border-radius: 50%;
 }
 
+.mainMenu {
+  display: flex;
+  justify-content: center;
+  margin-top: 2%;
+  width: 100%;
+  align-self: stretch;
+  align-items: stretch;
+  align-content: stretch;
+  position: sticky;
+  top: 0px;
+}
+
+.mainMenuButton {
+  width: 100%;
+  height: 3em;
+  align-self: stretch;
+  font-size: 1.5em;
+}
+
+.mainMenuButtonPressed {
+  width: 100%;
+  height: 3em;
+  align-self: stretch;
+  font-size: 1.5em;
+  background-color: cornflowerblue;
+}
+
+.emptySpace {
+  padding-bottom: 20%;
+}
+
+.techMenu {
+  display: flex;
+  padding: 2.5%;
+  align-self: center;
+  align-items: center;
+  align-content: center;
+  flex-direction: column;
+}
+
+.techMenuButton {
+  width: 25%;
+  height: 2em;
+  margin-bottom: 2%;
+}
+
+.techMenuButtonPressed {
+  width: 25%;
+  height: 2em;
+  margin-bottom: 2%;
+  background-color: cornflowerblue;
+}
+
+.techs {
+  padding-bottom: 7.5%;
+  align-self: center;
+  align-items: center;
+  align-content: center;
+  text-align: center;
+}
+
+.extraSpace {
+  padding-bottom: 7.5%;
+}
+
 .container1 {
   display: flex;
   align-items: center;
@@ -175,7 +240,7 @@ button {
 
 .title {
   position: sticky;
-  top: 0px;
+  top: 10%;
   background-color: linear-gradient(to right, black, 20%, cyan);
   border-radius: 10%;
   height: 3em;
