--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@
 }
 
 .fitter{
+  margin-top: 5%;
   height: 100%;
   flex-direction: column;
   justify-content: center;
@@ -137,19 +138,23 @@ button {
   align-items: stretch;
   align-content: stretch;
   position: sticky;
-  top: 0px;
+  top: 0%;
+  z-index: 15;
+  position: fixed;
 }
 
 .mainMenuButton {
   width: 100%;
-  height: 3em;
+  height: 15%;
+  /*height: 3em;*/
   align-self: stretch;
   font-size: 1.5em;
 }
 
 .mainMenuButtonPressed {
   width: 100%;
-  height: 3em;
+  height: 15%;
+  /*height: 3em;*/
   align-self: stretch;
   font-size: 1.5em;
   background-color: cornflowerblue;
